--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "moment": "^2.29.1",
     "polished": "^4.0.4",
     "react": "^17.0.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
